src/test/deca/context/invalid/autre/conv-float.deca
// Programme testant que ConvFloat ne marche pas avec un booleen

{
    float i = true;
}